# whirlpool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: whirlpool.hpp
solutions/: CMakeLists.txt  broadcast.cpp  echo.cpp  uuid.cpp
